SERVER-70653 Call checkIfCollectionIsAlreadySharded without acquiring the collection CriticalSection